Fixed navbar not showing on desktop screen

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -168,6 +168,7 @@ html {
   top: 50px;
   left: 0;
   z-index: 3;
+  box-shadow: 0px 6px 8px -8px rgba(0, 0, 0, 0.25);
   background: $secondary-bg;
   pointer-events: all;
 
